--- a/Diaries/z5159898.md
+++ b/Diaries/z5159898.md
@@ -14,3 +14,5 @@ First sprint:
 - Found database to use (TMDb)
 - Setup mysql schema for backend
 - Started writing sql queries for backend
+- Setup aws mysql RDS
+- Setup aws S3 for image hosting
